# Style2Fab

./: deploy-plugin.bat  pyproject.toml
backend/assemble/: views.py
backend/assemble/assemble_utils/: assemble.py  similarity.py
backend/classify/: views.py
backend/edit/edit_utils/: preprocess.sh
backend/fetch/: views.py
backend/segment/: views.py
backend/segment/segment_utils/: auto_segment.sh  edge.py  mesh_editor.py  reconstruct.py  segment.sh  view_helpers.py
backend/stylize/: views.py
backend/stylize/x2mesh/implementation/: main.py  x2mesh.py
backend/stylize/x2mesh/implementation/helpers/: x2mesh_helpers.py
plugin/: __init__.py  deploy-plugin.py
plugin/operators/: select_mesh.py  utils.py
src/style2fab/: __init__.py
